--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
     <groupId>org.example</groupId>
     <artifactId>hello-strimzi</artifactId>
     <version>1.0.0.0</version>
-    <packaging>war</packaging>
     <name>strimzi helloworld</name>
     <description>Strimzi Helloworld</description>
     
@@ -80,6 +79,31 @@
             <url>https://maven.repository.redhat.com/ga/</url>
         </repository>
     </repositories>
+    
+    <profiles>
+		<profile>
+			<!-- When built in OpenShift the 'openshift' profile will be used when 
+				invoking mvn. -->
+			<!-- Use this profile for any OpenShift specific customization your app 
+				will need. -->
+			<!-- By default that is to put the resulting archive into the 'deployments' 
+				folder. -->
+			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
+			<id>openshift</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>3.2.2</version>
+						<configuration>
+							<outputDirectory>deployments</outputDirectory>
+							<warName>ROOT</warName>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+    </profiles>
 
     <pluginRepositories>
         <pluginRepository>
