--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
     Copyright 2015, Red Hat, Inc. and/or its affiliates, and individual
     contributors by the @authors tag. See the copyright.txt in the
     distribution for a full listing of individual contributors.
-
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
@@ -18,26 +17,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
            <groupId>org.jboss.eap.quickstarts</groupId>
            <artifactId>quickstart-parent</artifactId>
            <version>7.1.0.GA</version>
            <relativePath>../pom.xml</relativePath>
-    </parent>
-
-    <groupId>org.example</groupId>
-    <artifactId>hello-strimzi</artifactId>
-    <version>1.0.0.0</version>
-    <name>strimzi helloworld</name>
-    <description>Strimzi Helloworld</description>
+       </parent>
+    <artifactId>helloworld</artifactId>
+    <packaging>war</packaging>
+    <name>${qs.name.prefix} helloworld</name>
+    <description>Helloworld</description>
     
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <distribution>repo</distribution>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+        </license>
+    </licenses>
+
+
     <dependencies>
+
         <!-- Import the CDI API, we use provided scope as the API is included in WildFly -->
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
-            <version>2.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -46,7 +52,6 @@
         <dependency>
             <groupId>org.jboss.spec.javax.annotation</groupId>
             <artifactId>jboss-annotations-api_1.2_spec</artifactId>
-            <version>1.0.2.Final</version>
             <scope>provided</scope>
         </dependency>
 
@@ -54,7 +59,6 @@
         <dependency>
             <groupId>org.jboss.spec.javax.servlet</groupId>
             <artifactId>jboss-servlet-api_3.1_spec</artifactId>
-            <version>1.0.2.Final</version>
             <scope>provided</scope>
         </dependency>
 
@@ -85,31 +89,6 @@
             <url>https://maven.repository.redhat.com/ga/</url>
         </repository>
     </repositories>
-    
-    <profiles>
-		<profile>
-			<!-- When built in OpenShift the 'openshift' profile will be used when 
-				invoking mvn. -->
-			<!-- Use this profile for any OpenShift specific customization your app 
-				will need. -->
-			<!-- By default that is to put the resulting archive into the 'deployments' 
-				folder. -->
-			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
-			<id>openshift</id>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-war-plugin</artifactId>
-						<version>${version.war.plugin}</version>
-						<configuration>
-							<outputDirectory>deployments</outputDirectory>
-							<warName>ROOT</warName>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-    </profiles>
 
     <pluginRepositories>
         <pluginRepository>
