--- a/hello-strimzi-consumer/pom.xml
+++ b/hello-strimzi-consumer/pom.xml
@@ -27,6 +27,7 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.11.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
