--- a/hello-strimzi-query/pom.xml
+++ b/hello-strimzi-query/pom.xml
@@ -6,8 +6,13 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>hello-strimzi-query</name>
+
+      <properties>
+            <maven.compiler.source>1.6</maven.compiler.source>
+            <maven.compiler.target>1.6</maven.compiler.target>
+      </properties>
+
   <dependencies>
-  
   <!--  RestEasy -->
     <dependency>
 		<groupId>org.jboss.resteasy</groupId>
@@ -15,21 +20,21 @@
 		<version>2.2.1.GA</version>
 		<scope>provided</scope>
 	</dependency>
-	
+
   <!-- Kafka -->
 	<dependency>
     	<groupId>org.apache.kafka</groupId>
   	  	<artifactId>kafka-clients</artifactId>
   	  	<version>2.0.0</version>
 	</dependency>
-     
+
    <!-- Servlet -->
 	<dependency>
     	<groupId>javax.servlet</groupId>
     	<artifactId>javax.servlet-api</artifactId>
     	<version>4.0.1</version>
 	</dependency>
-     
+
     <!-- Logging -->
     <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -47,7 +52,7 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.2</version>
         </dependency>
-     
+
    <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
@@ -56,7 +61,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
+
   <profiles>
     <profile>
      <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
@@ -81,5 +86,5 @@
       </build>
     </profile>
   </profiles>
-  
+
 </project>
