--- a/hello-strimzi-stream/pom.xml
+++ b/hello-strimzi-stream/pom.xml
@@ -6,8 +6,13 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>hello-strimzi-stream</name>
+
+      <properties>
+            <maven.compiler.source>1.6</maven.compiler.source>
+            <maven.compiler.target>1.6</maven.compiler.target>
+      </properties>
+
   <dependencies>
-	
   <!-- Kafka -->
 	<dependency>
     	<groupId>org.apache.kafka</groupId>
@@ -19,14 +24,14 @@
     	<artifactId>kafka-streams</artifactId>
     	<version>2.0.0</version>
 	</dependency>
-     
+
    <!-- Servlet -->
 	<dependency>
     	<groupId>javax.servlet</groupId>
     	<artifactId>javax.servlet-api</artifactId>
     	<version>4.0.1</version>
 	</dependency>
-     
+
     <!-- Logging -->
              <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -44,7 +49,7 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.2</version>
         </dependency>
-     
+
    <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
@@ -53,11 +58,11 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
+
   <build>
     <finalName>hello-strimzi-stream</finalName>
   </build>
-  
+
   <profiles>
     <profile>
      <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
@@ -82,5 +87,5 @@
       </build>
     </profile>
   </profiles>
-  
+
 </project>
