--- a/hello-strimzi-query/pom.xml
+++ b/hello-strimzi-query/pom.xml
@@ -6,12 +6,7 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>hello-strimzi-query</name>
-
-      <properties>
-            <maven.compiler.source>1.6</maven.compiler.source>
-            <maven.compiler.target>1.6</maven.compiler.target>
-      </properties>
-
+  
   <dependencies>
   <!--  RestEasy -->
     <dependency>
@@ -61,6 +56,19 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  <build>
+    <finalName>hello-strimzi-query</finalName>
+      <plugins>    
+    	<plugin>    
+        	<artifactId>maven-compiler-plugin</artifactId>
+        	<configuration>
+            	<source>1.8</source>
+            	<target>1.8</target>
+        	</configuration>
+    	</plugin>
+  	</plugins>
+  </build>
 
   <profiles>
     <profile>
