--- a/hello-strimzi-stream/pom.xml
+++ b/hello-strimzi-stream/pom.xml
@@ -7,11 +7,6 @@
   <version>1.0-SNAPSHOT</version>
   <name>hello-strimzi-stream</name>
 
-      <properties>
-            <maven.compiler.source>1.6</maven.compiler.source>
-            <maven.compiler.target>1.6</maven.compiler.target>
-      </properties>
-
   <dependencies>
   <!-- Kafka -->
 	<dependency>
@@ -61,6 +56,15 @@
 
   <build>
     <finalName>hello-strimzi-stream</finalName>
+      <plugins>    
+    	<plugin>    
+        	<artifactId>maven-compiler-plugin</artifactId>
+        	<configuration>
+            	<source>1.8</source>
+            	<target>1.8</target>
+        	</configuration>
+    	</plugin>
+  	</plugins>
   </build>
 
   <profiles>
@@ -83,6 +87,13 @@
               		  <warName>hello-strimzi-stream</warName>
                 </configuration>
             </plugin>
+  			<plugin>    
+        		<artifactId>maven-compiler-plugin</artifactId>
+        		<configuration>
+            		<source>1.8</source>
+            		<target>1.8</target>
+        		</configuration>
+    		</plugin>
         </plugins>
       </build>
     </profile>
