--- a/hello-strimzi-query/pom.xml
+++ b/hello-strimzi-query/pom.xml
@@ -35,7 +35,7 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.11.1</version>
-            <scope>provided</scope>
+            <!--  <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
